--- a/sell.html
+++ b/sell.html
@@ -156,7 +156,7 @@
 
 
         <div class="courseDay">
-            <div class="courseItem">
+            <div class="courseItem courseItemhover">
                 <p class="courseItemText">第一天</p>
             </div>
 
@@ -178,7 +178,7 @@
                     <img src="images/sell/surperday11.png" class="surperCourseImg" />
                     <div class="surperCourseImgSubTitleCon">
                         <div class="surperCourseImgTitleShadow"></div>
-                        <div class="suerperCourseTitle">基于人群标签的成交布局</div>
+                        <div class="suerperCourseTitle">货品规划</div>
                     </div>
                 </div>
 
@@ -193,16 +193,97 @@
                     <img src="images/sell/surperday11.png" class="surperCourseImg" />
                     <div class="surperCourseImgSubTitleCon">
                         <div class="surperCourseImgTitleShadow"></div>
-                        <div class="suerperCourseTitle">基于人群标签的成交布局</div>
+                        <div class="suerperCourseTitle">制定目标</div>
                     </div>
                 </div>
 
                 <div class="surperCourseContentCon">
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促品类规划</p>
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促单品规划</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>双11目标维度</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>销售目标分解</p>
                 </div>
             </div>
 
+            <div class="surperCourseItem">
+                <div class="surperCourseImgCon">
+                    <img src="images/sell/surperday11.png" class="surperCourseImg" />
+                    <div class="surperCourseImgSubTitleCon">
+                        <div class="surperCourseImgTitleShadow"></div>
+                        <div class="suerperCourseTitle">流量规划</div>
+                    </div>
+                </div>
+
+                <div class="surperCourseContentCon">
+                      <p class="surperContextItem"><span class="specialCircle"></span>流量与转化应急方案</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>产品库存备案</p>
+                       <p class="surperContextItem"><span class="specialCircle"></span>人员问题备案</p>
+                </div>
+            </div>
+
+            <div class="surperCourseItem">
+                <div class="surperCourseImgCon">
+                    <img src="images/sell/surperday11.png" class="surperCourseImg" />
+                    <div class="surperCourseImgSubTitleCon">
+                        <div class="surperCourseImgTitleShadow"></div>
+                        <div class="suerperCourseTitle">活动规划</div>
+                    </div>
+                </div>
+
+                <div class="surperCourseContentCon">
+                      <p class="surperContextItem"><span class="specialCircle"></span>活动主题策划</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>活动策略制定</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>活动节奏把控</p>
+                </div>
+            </div>
+
+            <div class="surperCourseItem">
+                <div class="surperCourseImgCon">
+                    <img src="images/sell/surperday11.png" class="surperCourseImg" />
+                    <div class="surperCourseImgSubTitleCon">
+                        <div class="surperCourseImgTitleShadow"></div>
+                        <div class="suerperCourseTitle">任务分工</div>
+                    </div>
+                </div>
+
+                <div class="surperCourseContentCon">
+                      <p class="surperContextItem"><span class="specialCircle"></span>责任岗位落地</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>推时时间戳点</p>
+                </div>
+            </div>
+
+            <div class="surperCourseItem">
+                <div class="surperCourseImgCon">
+                    <img src="images/sell/surperday11.png" class="surperCourseImg" />
+                    <div class="surperCourseImgSubTitleCon">
+                        <div class="surperCourseImgTitleShadow"></div>
+                        <div class="suerperCourseTitle">应急方案</div>
+                    </div>
+                </div>
+
+                <div class="surperCourseContentCon">
+                      <p class="surperContextItem"><span class="specialCircle"></span>流量与转化应急方案</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>产品库存备案</p>
+                       <p class="surperContextItem"><span class="specialCircle"></span>人员问题备案</p>
+                </div>
+            </div>
+
+             <div class="surperCourseItem">
+                <div class="surperCourseImgCon">
+                    <img src="images/sell/surperday11.png" class="surperCourseImg" />
+                    <div class="surperCourseImgSubTitleCon">
+                        <div class="surperCourseImgTitleShadow"></div>
+                        <div class="suerperCourseTitle">数据复盘</div>
+                    </div>
+                </div>
+
+                <div class="surperCourseContentCon">
+                      <p class="surperContextItem"><span class="specialCircle"></span>运营推广评估</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>视觉客报工效评估</p>
+                       <p class="surperContextItem"><span class="specialCircle"></span>仓储物流时效评估</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="surperCourseCon hidden">
             <div class="surperCourseItem">
                 <div class="surperCourseImgCon">
                     <img src="images/sell/surperday11.png" class="surperCourseImg" />
@@ -213,9 +294,44 @@
                 </div>
 
                 <div class="surperCourseContentCon">
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促品类规划</p>
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促单品规划</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>精准标签的确定</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>标签与产品的转化提升</p>
                 </div>
+            </div>
+
+            <div class="surperCourseItem">
+
+                <div class="surperCourseImgCon">
+                    <img src="images/sell/surperday11.png" class="surperCourseImg" />
+                    <div class="surperCourseImgSubTitleCon">
+                        <div class="surperCourseImgTitleShadow"></div>
+                        <div class="suerperCourseTitle">搜索关键词的漏斗布局</div>
+                    </div>
+                </div>
+
+                <div class="surperCourseContentCon">
+                      <p class="surperContextItem"><span class="specialCircle"></span>核心关键词确定</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>核心关键词打散应用</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>21天搜索流量暴增技巧</p>
+                </div>
+            </div>
+
+            <div class="surperCourseItem">
+
+                <div class="surperCourseImgCon">
+                    <img src="images/sell/surperday11.png" class="surperCourseImg" />
+                    <div class="surperCourseImgSubTitleCon">
+                        <div class="surperCourseImgTitleShadow"></div>
+                        <div class="suerperCourseTitle">21天直钻--圈攻守</div>
+                    </div>
+                </div>
+
+                <div class="surperCourseContentCon">
+                      <p class="surperContextItem"><span class="specialCircle"></span>21天节奏制定</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>圈攻守应用策略</p>
+                       <p class="surperContextItem"><span class="specialCircle"></span>直钻营销落地方案</p>
+                </div>
+
             </div>
 
             <div class="surperCourseItem">
@@ -223,45 +339,71 @@
                     <img src="images/sell/surperday11.png" class="surperCourseImg" />
                     <div class="surperCourseImgSubTitleCon">
                         <div class="surperCourseImgTitleShadow"></div>
-                        <div class="suerperCourseTitle">基于人群标签的成交布局</div>
+                        <div class="suerperCourseTitle">单品操作引爆全店</div>
                     </div>
                 </div>
 
                 <div class="surperCourseContentCon">
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促品类规划</p>
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促单品规划</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>私域流量的聚散攻略</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>单品攻域流量的抢占技巧</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>全域流量引爆全店</p>
                 </div>
-            </div>
 
+            </div>
+        </div>
+
+        <div class="surperCourseCon hidden">
             <div class="surperCourseItem">
                 <div class="surperCourseImgCon">
                     <img src="images/sell/surperday11.png" class="surperCourseImg" />
                     <div class="surperCourseImgSubTitleCon">
                         <div class="surperCourseImgTitleShadow"></div>
-                        <div class="suerperCourseTitle">基于人群标签的成交布局</div>
+                        <div class="suerperCourseTitle">内容营销与CRM最新玩法</div>
                     </div>
                 </div>
 
                 <div class="surperCourseContentCon">
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促品类规划</p>
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促单品规划</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>私域流量的客户标签</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>私域流量的触达渠道</p>
                 </div>
             </div>
 
             <div class="surperCourseItem">
+              
                 <div class="surperCourseImgCon">
                     <img src="images/sell/surperday11.png" class="surperCourseImg" />
                     <div class="surperCourseImgSubTitleCon">
                         <div class="surperCourseImgTitleShadow"></div>
-                        <div class="suerperCourseTitle">基于人群标签的成交布局</div>
+                        <div class="suerperCourseTitle">内容营销的大促预热策略</div>
                     </div>
                 </div>
 
                 <div class="surperCourseContentCon">
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促品类规划</p>
-                      <p class="surperContextItem"><span class="specialCircle"></span>大促单品规划</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>内容的市场风格分析</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>高效的品类特色分析</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>内容营销的竞品分析</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>私域引爆抢占公域技巧</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>全域引流内容种草技巧</p>
                 </div>
             </div>
+
+            <div class="surperCourseItem">
+
+                <div class="surperCourseImgCon">
+                    <img src="images/sell/surperday11.png" class="surperCourseImg" />
+                    <div class="surperCourseImgSubTitleCon">
+                        <div class="surperCourseImgTitleShadow"></div>
+                        <div class="suerperCourseTitle">大促中内容营销全店引爆</div>
+                    </div>
+                </div>
+
+                <div class="surperCourseContentCon">
+                      <p class="surperContextItem"><span class="specialCircle"></span>互动营销助力大促赛马</p>
+                      <p class="surperContextItem"><span class="specialCircle"></span>沉淀粉丝打造大促爆款</p>
+                </div>
+
+            </div>
+
         </div>
   </div>
 
@@ -741,7 +883,118 @@
                       </div>
                   </div>
               </div>
+
+              <div class="clear"></div>
           </div>
+      </div>
+  </div>
+
+  <!--大咖-->
+  <div class="dakaOuterCon">
+      <div class="dakaCon fixedWidth">
+            <div class="dakaTitleCon">
+                <img src="images/sell/dakatitle.png" class="dakaTitleImg" />
+            </div>
+
+            <div class="dakaContextCon">
+
+
+                <div class="dakaIntroCon">
+                  <table class="dakaIntroTable hidden">
+                    <tr>
+                        <td>
+                          <div class="dakaTeacherImgCon ">
+                            <img src="images/sell/dakashilin.png" class='dakaTeacherImg' />
+                          </div>
+                        </td>
+                        <td>
+                            <div class="dakaTeacherRightTextCon">
+                                <div class="dakaTeacherNameCon">
+                                    石林
+                                </div>
+                                <div class="dakaTeacher">
+                                  <div class="dakaTeacherText">
+
+                                     <p class="">淘宝联盟讲师、卖家网认证专家。 </p>
+                                     <p>2012、2013年度荣获淘宝大学最高讲师奖项《春蚕丝语奖》；专注一对一电商教练及私家顾问。</p>
+                                     <p> 2006年入淘，有10年电商操作经验。往年双十一自有店铺销售额一般在1000万上下，有中大型店铺双十一全盘操作经验。2016年双十一，手上3家店铺销售额单日突破2000万。 </p>
+                                   </div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                  </table>
+
+                  <table class="dakaIntroTable ">
+                    <tr>
+                        <td>
+                          <div class="dakaTeacherImgCon">
+                            <img src="images/sell/daka1.png" class='dakaTeacherImg' />
+                          </div>
+                        </td>
+                        <td>
+                            <div class="dakaTeacherRightTextCon">
+                                <div class="dakaTeacherNameCon">
+                                    神秘讲师
+                                </div>
+                                <div class="dakaTeacher">
+                                  <div class="dakaTeacherText">
+
+                                     <p class="">10年一线电商运营实操经验，16年自营店铺双 11销售过亿。 </p>
+                                     <p>自营店铺涉及有：家具、男女装、美妆、女鞋、母婴、食品等类目，3个月新店铺从0到月销500万，美妆自主品牌新店从0到年销售额过5000万。 </p>
+                                     <p> 擅长团队的搭建和裂变，10年电商60%的员工一直在职。</p>
+                                   </div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                  </table>
+
+                  <table class="dakaIntroTable hidden">
+                    <tr>
+                        <td>
+                          <div class="dakaTeacherImgCon">
+                            <img src="images/sell/daka2.png" class='dakaTeacherImg' />
+                          </div>
+                        </td>
+                        <td>
+                            <div class="dakaTeacherRightTextCon">
+                                <div class="dakaTeacherNameCon">
+                                    神秘讲师
+                                </div>
+                                <div class="dakaTeacher">
+                                  <div class="dakaTeacherText">
+
+                                     <p class="">万堂书院讲师，2012年万堂书院最受欢迎讲师，2013王者争霸优秀导师。  </p>
+                                     <p>从事电商7年，自营21个店铺涉及12个类目。 </p>
+                                     <p> 自从09年第一年双11已经连续8年大促操盘。16年操盘店铺双11当天销售额过千万。 </p>
+                                   </div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                  </table>
+
+                </div>
+
+            </div>
+
+            <div class="dakaTeacherLittleList">
+                <div class="dakateacherItem">
+                    <img src="images/sell/dakali1.png" class="datateacherItemImg" />
+                </div>
+
+                <div class="dakateacherItem">
+                    <img src="images/sell/dakali2.png" class="datateacherItemImg" />
+                </div>
+
+                <div class="dakateacherItem">
+                    <img src="images/sell/dakali3.png" class="datateacherItemImg" />
+                </div>
+            </div>
+            <div class="teachercommituCon">
+                <img src="images/sell/dakabtn.png" class="teacherCommon" />
+            </div>
       </div>
   </div>
 
