--- a/sell.html
+++ b/sell.html
@@ -19,6 +19,7 @@
 
   <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="js/sell.js"></script>
+  <script type="text/javascript" src="js/common.js"></script>
 
 </head>
 
@@ -57,27 +58,27 @@
     <div class="navTop">
           <ul class="nvavTopUl fixedWidth">
             <li class="navTopLi">
-              <a href="" class="TopABtn">首页</a>
+              <a href="http://sz.11.judingli.com?1" target="_blank" class="TopABtn">首页</a>
             </li>
 
             <li class="navTopLi">
-              <a href="" class="TopABtn">培训课程</a>
+              <a href="http://sz.11.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
             </li>
 
             <li class="navTopLi">
-              <a href="" class="TopABtn">电商孵化</a>
+              <a href="http://sz.fh.judingli.com?3" target="_blank" class="TopABtn">电商孵化</a>
             </li>
 
             <li class="navTopLi">
-              <a href="" class="TopABtn">学员案例</a>
+              <a href="http://sz.pj.judingli.com?4" target="_blank" class="TopABtn">学员案例</a>
             </li>
 
             <li class="navTopLi">
-              <a href="" class="TopABtn">实力保障</a>
+              <a href="http://sz.sl.judingli.com?5" target="_blank" class="TopABtn">实力保障</a>
             </li>
 
             <li class="navTopLi">
-              <a href="" class="TopABtn">更多资讯</a>
+              <a href="http://www.judingli.com" target="_blank" class="TopABtn">更多资讯</a>
             </li>
           </ul>
     </div>
