--- a/borken.html
+++ b/borken.html
@@ -17,67 +17,72 @@
   <link href="css/common.css" type="text/css" rel="stylesheet" />
   <link href="css/broken.css" type="text/css" rel="stylesheet" />
 
+  <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="js/broken.js"></script>
+  <script type="text/javascript" src="js/common.js"></script>
+
 </head>
 
 <body>
 
 	<header class="header">
-	    <div class="fixedWidth LogoT">
-	      <!--Logo-->
-	        <div class="LogoLeft clear ">          
-	          <div class="TopLogoD Topinline-box">
-	            <img src="images/logo.png" class="Toplogo" />
-	          </div>
+    <div class="fixedWidth LogoT">
+      <!--Logo-->
+        <div class="LogoLeft clear ">          
+          <div class="TopLogoD Topinline-box">
+            <img src="images/logo.png" class="Toplogo" />
+          </div>
 
-	          <div class="TopLogoLine Topinline-box">
-	          </div>
+          <div class="TopLogoLine Topinline-box">
+          </div>
 
-	          <div class="LogoTitleD Topinline-box">
-	            <p class="TopLogoFirst">深圳华南旗舰电商培训机构</p>
-	            <p class="TopLogoSecond">3万家淘宝天猫店铺培训学习的选择</p>
-	          </div>
-	        </div>
+          <div class="LogoTitleD Topinline-box">
+            <p class="TopLogoFirst">深圳华南旗舰电商培训机构</p>
+            <p class="TopLogoSecond">3万家淘宝天猫店铺培训学习的选择</p>
+          </div>
+        </div>
 
-	        <!--电话-->
-	        <div class="TopPhoneRight clear">
-	          <div class="TopPhoneD Topinline-box">
-	            <img src="images/dianhua.png" class="TopPhoneLogo" />
-	          </div>
-	          <div class="TopPhoneNumD Topinline-box">
-	            <p class="TopPhoneTitle">课程咨询</p>
-	            <p class="TopPhone">180&nbsp;2578&nbsp;0095</p>
-	          </div>
-	        </div>
-	    </div>
+        <!--电话-->
+        <div class="TopPhoneRight clear">
+          <div class="TopPhoneD Topinline-box">
+            <img src="images/dianhua.png" class="TopPhoneLogo" />
+          </div>
+          <div class="TopPhoneNumD Topinline-box">
+            <p class="TopPhoneTitle">课程咨询</p>
+            <p class="TopPhone">180&nbsp;2578&nbsp;0095</p>
+          </div>
+        </div>
+    </div>
 
 
-	    <div class="navTop">
-	          <ul class="nvavTopUl fixedWidth">
-	            <li class="navTopLi">
-	              <a href="" class="TopABtn">首页</a>
-	            </li>
+    <div class="navTop">
+          <ul class="nvavTopUl fixedWidth">
+            <li class="navTopLi">
+              <a href="http://sz.11.judingli.com?1" target="_blank" class="TopABtn">首页</a>
+            </li>
 
-	            <li class="navTopLi">
-	              <a href="" class="TopABtn">培训课程</a>
-	            </li>
+            <li class="navTopLi">
+              <a href="http://sz.11.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
+            </li>
 
-	            <li class="navTopLi">
-	              <a href="" class="TopABtn">电商孵化</a>
-	            </li>
+            <li class="navTopLi">
+              <a href="http://sz.fh.judingli.com?3" target="_blank" class="TopABtn">电商孵化</a>
+            </li>
 
-	            <li class="navTopLi">
-	              <a href="" class="TopABtn">学员案例</a>
-	            </li>
+            <li class="navTopLi">
+              <a href="http://sz.pj.judingli.com?4" target="_blank" class="TopABtn">学员案例</a>
+            </li>
 
-	            <li class="navTopLi">
-	              <a href="" class="TopABtn">实力保障</a>
-	            </li>
+            <li class="navTopLi">
+              <a href="http://sz.sl.judingli.com?5" target="_blank" class="TopABtn">实力保障</a>
+            </li>
 
-	            <li class="navTopLi">
-	              <a href="" class="TopABtn">更多资讯</a>
-	            </li>
-	          </ul>
-	    </div>
+            <li class="navTopLi">
+              <a href="http://www.judingli.com" target="_blank" class="TopABtn">更多资讯</a>
+            </li>
+          </ul>
+    </div>
+
 	</header>
 
 	<!--banner-->	
@@ -1046,10 +1051,6 @@
 
 </div> 
 
-
-
-  <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="js/broken.js"></script>
 
 </body>
 
