--- a/Our.html
+++ b/Our.html
@@ -28,7 +28,7 @@
 	<header class="header">
     <div class="fixedWidth LogoT">
       <!--Logo-->
-        <div class="LogoLeft clear ">          
+        <div class="LogoLeft ">          
           <div class="TopLogoD Topinline-box">
             <img src="images/logo.png" class="Toplogo" />
           </div>
@@ -43,7 +43,7 @@
         </div>
 
         <!--电话-->
-        <div class="TopPhoneRight clear">
+        <div class="TopPhoneRight">
           <div class="TopPhoneD Topinline-box">
             <img src="images/dianhua.png" class="TopPhoneLogo" />
           </div>
@@ -52,6 +52,8 @@
             <p class="TopPhone">180&nbsp;2578&nbsp;0095</p>
           </div>
         </div>
+
+        <div class="clear"></div>
     </div>
 
 
