--- a/Our.html
+++ b/Our.html
@@ -37,7 +37,7 @@
           </div>
 
           <div class="LogoTitleD Topinline-box">
-            <p class="TopLogoFirst">深圳华南旗舰电商培训机构</p>
+            <p class="TopLogoFirst">华南旗舰电商培训机构</p>
             <p class="TopLogoSecond">3万家淘宝天猫店铺培训学习的选择</p>
           </div>
         </div>
@@ -60,11 +60,11 @@
     <div class="navTop">
           <ul class="nvavTopUl fixedWidth">
             <li class="navTopLi">
-              <a href="http://sz.11.judingli.com?1" target="_blank" class="TopABtn">首页</a>
+              <a href="http://sz.pj.judingli.com?1" target="_blank" class="TopABtn">首页</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.11.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
+              <a href="http://sz.pj.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
             </li>
 
             <li class="navTopLi">
@@ -72,7 +72,7 @@
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.pj.judingli.com?4" target="_blank" class="TopABtn">学员案例</a>
+              <a href="http://sz.11.judingli.com?4" target="_blank" class="TopABtn">双11特训营</a>
             </li>
 
             <li class="navTopLi">
@@ -118,10 +118,10 @@
               <li class="gapSecondli">
                   <img src="images/gapLeft.png" class="gapSecond-Left" />
               </li>
-              <li>
+              <li class="gapSecondli">
                   <p class="gapSecondText">领先一步</p>
               </li>              
-              <li>
+              <li class="gapSecondli">
                 <img src="images/gapRight.png" class="gapSecond-Right" />
               </li>
             </ul>
@@ -202,10 +202,10 @@
               <li class="gapSecondli">
                   <img src="images/gapLeft.png" class="gapSecond-Left" />
               </li>
-              <li>
-                  <p class="gapSecondText">先行者</p>
+              <li class="gapSecondli gapLineLitTextSpace1">
+                  <p class="gapSecondText ">先行者</p>
               </li>              
-              <li>
+              <li class="gapSecondli">
                 <img src="images/gapRight.png" class="gapSecond-Right" />
               </li>
             </ul>
@@ -365,10 +365,10 @@
               <li class="gapSecondli">
                   <img src="images/gapLeft.png" class="gapSecond-Left" />
               </li>
-              <li>
+              <li class="gapSecondli gapLineLitTextSpace2">
                   <p class="gapSecondText">选择的人多，自然是好培训</p>
               </li>              
-              <li>
+              <li class="gapSecondli">
                 <img src="images/gapRight.png" class="gapSecond-Right" />
               </li>
             </ul>
@@ -539,10 +539,10 @@
          <li class="gapSecondli">
             <img src="images/gapLeft.png" class="gapSecond-Left" />
          </li>
-        <li>
+        <li  class="gapSecondli gapSecondTOtherMidText">
             <p class="gapSecondText">顶级大卖家讲团</p>
         </li>              
-        <li>
+        <li class="gapSecondli" >
             <img src="images/gapRight.png" class="gapSecond-Right" />
         </li>
       </ul>
@@ -747,10 +747,10 @@
          <li class="gapSecondli">
             <img src="images/gapLeft.png" class="gapSecond-Left" />
          </li>
-        <li>
+        <li class="gapSecondli coachmidGapText">
             <p class="gapSecondText">实力专业教练团</p>
-        </li>              
-        <li>
+        </li >              
+        <li class="gapSecondli">
             <img src="images/gapRight.png" class="gapSecond-Right" />
         </li>
       </ul>
@@ -872,7 +872,7 @@
           <img src="images/our/幂思内衣.png" class=" brand2" />
           </a>
           
-          <a href="javascript:void(0)" data-href="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/34150654.swf class="brandItemImg" target="_blank">
+          <a href="javascript:void(0)" data-href="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/34150654.swf" class="brandItemImg" target="_blank">
           <img src="images/our/托瑞斯.png" class=" brand2" />
 
           <a href="javascript:void(0)" data-href="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/51692720.swf" class="brandItemImg" target="_blank">
@@ -927,8 +927,10 @@
 
           <div class="VideoshowCon">
             <img src="images/our/videoBack.png" class="videoShowImg" />
-            <video class="videoEle hidden">
-            </video>
+            <div class="videoEleCon">
+                <embed play="false"  flashvars="autoplay=false&play=false" src="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/62010507.swf" quality="high" width="100%" height="100%" align="middle" allowScriptAccess="never" allowFullScreen="true" type="application/x-shockwave-flash"></embed>
+            </div>
+            
           </div>
       </div>
   </div>
@@ -945,10 +947,10 @@
               <li class="gapSecondli">
                   <img src="images/gapLeft.png" class="gapSecond-Left" />
               </li>
-              <li>
-                  <p class="gapSecondText">这些都是免费的</p>
+              <li class="gapSecondli gapZhenDuanMidText">
+                  <p class="gapSecondText gapSubLiMidP4">这些都是免费的</p>
               </li>              
-              <li>
+              <li class="gapSecondli">
                 <img src="images/gapRight.png" class="gapSecond-Right" />
               </li>
             </ul>
@@ -1151,7 +1153,7 @@
                      </li>
                   </ul>
 
-              </div>
+              </div>-
 
               <div class="reportRightCon">
                 <div class="reportQcodeCon">
@@ -1193,7 +1195,7 @@
       </div>
 
       <div class="videoEleContainer" id="videoEleContainer">
-        <embed src="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/51834337.swf" quality="high" width="100%" height="100%" align="middle" allowScriptAccess="never" allowFullScreen="true" type="application/x-shockwave-flash"></embed>
+        <embed   src="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/51834337.swf" quality="high" width="100%" height="100%" align="middle" allowScriptAccess="never" allowFullScreen="true" type="application/x-shockwave-flash"></embed>
       </div>
   </div>
 
