--- a/borken.html
+++ b/borken.html
@@ -28,7 +28,7 @@
 	<header class="header">
     <div class="fixedWidth LogoT">
       <!--Logo-->
-        <div class="LogoLeft clear ">          
+        <div class="LogoLeft ">          
           <div class="TopLogoD Topinline-box">
             <img src="images/logo.png" class="Toplogo" />
           </div>
@@ -37,13 +37,13 @@
           </div>
 
           <div class="LogoTitleD Topinline-box">
-            <p class="TopLogoFirst">深圳华南旗舰电商培训机构</p>
+            <p class="TopLogoFirst">华南旗舰电商培训机构</p>
             <p class="TopLogoSecond">3万家淘宝天猫店铺培训学习的选择</p>
           </div>
         </div>
 
         <!--电话-->
-        <div class="TopPhoneRight clear">
+        <div class="TopPhoneRight">
           <div class="TopPhoneD Topinline-box">
             <img src="images/dianhua.png" class="TopPhoneLogo" />
           </div>
@@ -52,17 +52,19 @@
             <p class="TopPhone">180&nbsp;2578&nbsp;0095</p>
           </div>
         </div>
+
+        <div class="clear"></div>
     </div>
 
 
     <div class="navTop">
           <ul class="nvavTopUl fixedWidth">
             <li class="navTopLi">
-              <a href="http://sz.11.judingli.com?1" target="_blank" class="TopABtn">首页</a>
+              <a href="http://sz.pj.judingli.com?1" target="_blank" class="TopABtn">首页</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.11.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
+              <a href="http://sz.pj.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
             </li>
 
             <li class="navTopLi">
@@ -70,7 +72,7 @@
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.pj.judingli.com?4" target="_blank" class="TopABtn">学员案例</a>
+              <a href="http://sz.11.judingli.com?4" target="_blank" class="TopABtn">双11特训营</a>
             </li>
 
             <li class="navTopLi">
@@ -91,10 +93,10 @@
 	</div>
 
 	<div class="wordCon">
-
+<!-- 
 		<img src="images/broken/quesIcon.png" class="quesIconImg" />
 		<img src="images/broken/kulian.png" class="kulianImg" />
-
+ -->
 
 		<!-- if you is a shoper -->
 		<div class="ShoperCon">
@@ -112,6 +114,7 @@
 				<div class="TianmaoItem">
 					流量渠道太少？
 				</div>
+				<div class="clear"></div>
 			</div>
 			<div class="TianmaoItemCon">
 				<div class="TianmaoItem">
@@ -120,12 +123,17 @@
 				<div class="TianmaoItem">
 					直钻淘用不精？
 				</div>
+				<div class="clear"></div>
 			</div>
 		</div>
 
 		<img src="images/broken/anniu1.png" class="anniu1Img" />
 
-		
+	</div>
+	
+
+	<div class="wordSecondCon">
+
 		<img src="images/broken/liutian.png" class="liutianImg" />
 
 		<img src="images/broken/youshi.png" class="youshiImg" />
@@ -149,61 +157,64 @@
 
 	<!--任务-->
 	<div class="taskDivCon clear">
-		<ul class="taskUl">
-			<li class="taskLi">
-				<div class="taskItemTop">明任务	</div>
-				<div class="taskItemContentCon taskMoreT">
-					<p class="taskItemContentT">标准化实操作业体系，每天布置任务，奖惩分明强力保落地</p>
-					<div class="taskItemImgCon">
-						<img src="images/broken/day1.png" class="taskItemimg" />
-						<img src="images/broken/day2.png" class="taskItemimg" />
-						<img src="images/broken/day3.png" class="taskItemimg" />
-						<img src="images/broken/day4.png" class="taskItemimg" />
-						<img src="images/broken/day5.png" class="taskItemimg" />
-						<img src="images/broken/day6.png" class="taskItemimg" />
-					</div>
-				</div>
-			</li>
+		<div class="taskDivInnerCon fixedWidth">
 
-			<li class="taskLi">
-				<div class="taskItemTop">强执行</div>
-				<div class="taskItemContentCon">
-					<p class="taskItemContentT">按模块输入36张电商运营表格，你收获的是一整套电商运营体系</p>
-					<div class="taskItemImgCon">
-						<img src="images/broken/qiangzhixing.png" class="qiangzhixingImg" />
-					</div>
-				</div>
-			</li>
-
-
-			<li class="taskLi">
-				<div class="taskItemTop">出结果</div>
-				<div class="taskItemContentCon">
-					<p class="taskItemContentT">毕业店铺实操沙盘演练，落地执行方案输出，总教练点评提改进建议</p>
-					<div class="taskItemImgCon">
-						<div class="taskResultItem">
-							<img src="images/broken/fanganchengxian.png" class="taskReusltItemImg"/>
-							<p class="taskResultItemP"></p>
-						</div>
-
-						<div class="taskResultItem">
-							<img src="images/broken/fangandianping.png" class="taskReusltItemImg"/>
-							<p class="taskResultItemP"></p>
-						</div>
-
-						<div class="taskResultItem">
-							<img src="images/broken/fanganyanshi.png" class="taskReusltItemImg"/>
-							<p class="taskResultItemP"></p>
+			<ul class="taskUl">
+				<li class="taskLi">
+					<div class="taskItemTop">明<br/>任<br/>务	</div>
+					<div class="taskItemContentCon taskMoreT">
+						<p class="taskItemContentT">标准化实操作业体系，每天布置任务，奖惩分明强力保落地</p>
+						<div class="taskItemImgCon">
+							<img src="images/broken/day1.png" class="taskItemimg" />
+							<img src="images/broken/day2.png" class="taskItemimg" />
+							<img src="images/broken/day3.png" class="taskItemimg" />
+							<img src="images/broken/day4.png" class="taskItemimg" />
+							<img src="images/broken/day5.png" class="taskItemimg" />
+							<img src="images/broken/day6.png" class="taskItemimg" />
 						</div>
 					</div>
-				</div>
-			</li>
-		</ul>
+				</li>
 
-		<div class="taskbottomCon">
-			<img src="images/broken/anniu4.png" class="taskbottomImg" />
+				<li class="taskLi">
+					<div class="taskItemTop">强<br/>执<br/>行</div>
+					<div class="taskItemContentCon">
+						<p class="taskItemContentT">按模块输入36张电商运营表格，你收获的是一整套电商运营体系</p>
+						<div class="taskItemImgCon">
+							<img src="images/broken/qiangzhixing.png" class="qiangzhixingImg" />
+						</div>
+					</div>
+				</li>
+
+
+				<li class="taskLi">
+					<div class="taskItemTop">出<br/>结<br/>果</div>
+					<div class="taskItemContentCon">
+						<p class="taskItemContentT">毕业店铺实操沙盘演练，落地执行方案输出，总教练点评提改进建议</p>
+						<div class="taskItemImgCon">
+							<div class="taskResultItem">
+								<img src="images/broken/fanganchengxian.png" class="taskReusltItemImg"/>
+								<p class="taskResultItemP"></p>
+							</div>
+
+							<div class="taskResultItem">
+								<img src="images/broken/fangandianping.png" class="taskReusltItemImg"/>
+								<p class="taskResultItemP"></p>
+							</div>
+
+							<div class="taskResultItem">
+								<img src="images/broken/fanganyanshi.png" class="taskReusltItemImg"/>
+								<p class="taskResultItemP"></p>
+							</div>
+						</div>
+					</div>
+				</li>
+			</ul>
+
+			<div class="taskbottomCon">
+				<img src="images/broken/anniu4.png" class="taskbottomImg" />
+			</div>
+
 		</div>
-
 	</div>
 
 	<div class="shopGapCon">
@@ -793,7 +804,7 @@
 
 			<div class="learnVideoCon">
 					<div class="learnVideoInnerCon" id="videoEleContainer" >
-						<embed src="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/51837381.swf" quality="high" width="100%" height="100%" align="middle" allowScriptAccess="never" allowFullScreen="true"  type="application/x-shockwave-flash"></embed>								
+						<embed  play="false"  flashvars="autoplay=false&play=false" src="http://cloud.video.taobao.com/play/u/1016142758/e/1/t/1/p/1/50004170681.swf" quality="high" width="100%" height="100%" align="middle" allowScriptAccess="never" allowFullScreen="true"  type="application/x-shockwave-flash"></embed>								
 					</div>
 
 					<div class="learnIntroCon">
