--- a/sell.html
+++ b/sell.html
@@ -28,7 +28,7 @@
   <header class="header">
     <div class="fixedWidth LogoT">
       <!--Logo-->
-        <div class="LogoLeft clear ">          
+        <div class="LogoLeft ">          
           <div class="TopLogoD Topinline-box">
             <img src="images/logo.png" class="Toplogo" />
           </div>
@@ -37,13 +37,13 @@
           </div>
 
           <div class="LogoTitleD Topinline-box">
-            <p class="TopLogoFirst">深圳华南旗舰电商培训机构</p>
+            <p class="TopLogoFirst">华南旗舰电商培训机构</p>
             <p class="TopLogoSecond">3万家淘宝天猫店铺培训学习的选择</p>
           </div>
         </div>
 
         <!--电话-->
-        <div class="TopPhoneRight clear">
+        <div class="TopPhoneRight">
           <div class="TopPhoneD Topinline-box">
             <img src="images/dianhua.png" class="TopPhoneLogo" />
           </div>
@@ -52,17 +52,19 @@
             <p class="TopPhone">180&nbsp;2578&nbsp;0095</p>
           </div>
         </div>
+
+        <div class="clear"></div>
     </div>
 
 
     <div class="navTop">
           <ul class="nvavTopUl fixedWidth">
             <li class="navTopLi">
-              <a href="http://sz.11.judingli.com?1" target="_blank" class="TopABtn">首页</a>
+              <a href="http://sz.pj.judingli.com?1" target="_blank" class="TopABtn">首页</a>
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.11.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
+              <a href="http://sz.pj.judingli.com?2" target="_blank" class="TopABtn">培训课程</a>
             </li>
 
             <li class="navTopLi">
@@ -70,7 +72,7 @@
             </li>
 
             <li class="navTopLi">
-              <a href="http://sz.pj.judingli.com?4" target="_blank" class="TopABtn">学员案例</a>
+              <a href="http://sz.11.judingli.com?4" target="_blank" class="TopABtn">双11特训营</a>
             </li>
 
             <li class="navTopLi">
